--- a/alumni/index.html
+++ b/alumni/index.html
@@ -27,9 +27,9 @@
   <meta property="og:url" content="https://tedxjmi.com/alumni">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@TEDx_JMI">
+  <meta name="twitter:site" content="@TEDxSIEGST">
   <!-- Google+ -->
-  <meta itemprop="name" content="Alumni of JMI">
+  <meta itemprop="name" content="About Tedxsiesgst">
   <meta itemprop="description" content="TEDxJMI - Igniting Minds. This October, at Jamia Millia Islamia.">
   <meta itemprop="image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
 
@@ -140,9 +140,7 @@
       </div>
       <!-- //.row -->
 
-   
-
-
+  
 
   
 
@@ -207,9 +205,9 @@
         <div class="col-sm-8">
           <div class="footer-social text-right">
             <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
-              <li><a href="https://www.facebook.com/tedxjmi/"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="https://twitter.com/TEDx_JMI"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="https://www.instagram.com/tedxjmi/"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.facebook.com/tedxsiesgst/"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://twitter.com/TEDxSIESGST"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://www.instagram.com/tedxSiesgst/"><i class="fa fa-instagram"></i></a></li>
             </ul>
             <br>
               <p class="disclaimer xs-text-center">
