title tag home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>TEDxSIESGST</title>
+  <title>TEDxSIESGST | Home</title>
   <link rel="shortcut icon" href="res/images/favicon.ico">
   <meta name="description" content="TEDxSIESGST, x = independently organised TED event. SomethinK Different This October, at SIES Graduate School of Technology.">
   <meta name="keywords" content="TEDx, SIESGST, SIES Graduate School of Technology, Navi Mumbai, event, talks">
