--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <!-- Slide Show Image 1-->
     <div class="bg-slideshow-wrapper flexslider height-100 no-border no-border-radius no-margin width-100">
       <div class="slides height-100 width-100">
-        <div class="bg-cover bg-overlay-black-7 display-block height-100 width-100">
+        <div class="bg-cover bg-overlay-black-6 display-block height-100 width-100">
           <div class="display-table height-100 position-absolute position-top position-left width-100">
             <div class="display-table-cell vertical-align-middle">
               <div class="container">
@@ -146,7 +146,7 @@
         <!-- //.bg-cover -->
 
         <!-- Slide Show Image 2-->
-        <div class="bg-cover bg-overlay-black-7 display-block height-100 width-100">
+        <div class="bg-cover bg-overlay-black-4 display-block height-100 width-100">
           <div class="display-table height-100 position-absolute position-top position-left width-100">
             <div class="display-table-cell vertical-align-middle">
               <div class="container">
@@ -166,8 +166,8 @@
                     <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       SIES Graduate School of Technology, Nerul, Navi Mumbai
                     </h4>
-                    <br>
-                    <!-- <a href="/register/" class="btn btn-base-color sm-btn-medium btn-large">
+                    <!-- <br>
+                    <a href="/register/" class="btn btn-base-color sm-btn-medium btn-large">
                       Register Now -->
                     </a>
                   </div>
@@ -205,7 +205,7 @@
                       
                     </p>
                     <br>
-                    <h4 class="font-family-alt font-weight-900 letter-spacing-3 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
+                    <h4 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase text-white xs-title-small sm-title-medium title-extra-large">
                       SIES Graduate School of Technology, Nerul, Navi Mumbai
                     </h4>
                     <!--
@@ -295,7 +295,7 @@
   <!-- //Section - About End -->
 
   <!-- Section - Venue Start -->
-  <section id="venue" class="bg-cover bg-overlay-black-4 display-table height-100 no-padding width-100">
+  <section id="venue" class="bg-cover bg-overlay-black-7 display-table height-100 no-padding width-100">
     <div class="display-table-cell vertical-align-middle">
       <div class="container">
         <div class="row">
@@ -519,7 +519,7 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="footer-logo xs-text-center">
-            <img src="../res/images/footer2.png" alt="">
+            <img src="./res/images/footer2.png" alt="">
           </div>
           <!-- //.footer-logo -->
           <p class="disclaimer xs-text-center">
