--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
   <meta itemprop="image" content="https://tedxsiesgst.live/res/images/logos/tedxsiesgst_white.png">
 
   <!-- Browser themes -->
+  <!-- Chrome, Firefox OS and Opera -->
   <meta name="theme-color" content="#000">
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#000">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#000">
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="res/css/bootstrap.min.css">
