--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <!-- Title, icon, description and keywords -->
   <title>TEDxSIESGST | Home</title>
   <link rel="shortcut icon" href="res/images/favicon.ico">
+  <link rel="icon" href="res/images/favicon.ico">
+  <link rel="apple-touch-icon" href="res/images/favicon.ico">
   <meta name="description" content="TEDxSIESGST, x = independently organised TED event. SomethinK Different This October, at SIES Graduate School of Technology.">
   <meta name="keywords" content="TEDx, SIESGST, SIES Graduate School of Technology, Navi Mumbai, event, talks">
 
