--- a/contact/index.html
+++ b/contact/index.html
@@ -16,6 +16,8 @@
   <!-- Title, icon, description and keywords -->
   <title>Contact Us | TEDxSIESGST</title>
   <link rel="shortcut icon" href="../res/images/favicon.ico">
+  <link rel="icon" href="../res/images/favicon.ico">
+  <link rel="apple-touch-icon" href="../res/images/favicon.ico">
   <meta name="description" content="Contact us at TEDxJMI, x = independently organised TED event. Igniting Minds. This October, at Jamia Millia Islamia.">
   <meta name="keywords" content="TEDx, JMI, Jamia Millia Islamia, New Delhi, event, talks">
 
