header tag with meta and social media integration

--- a/about/index.html
+++ b/about/index.html
@@ -18,22 +18,30 @@
   <link rel="shortcut icon" href="../res/images/favicon.ico">
   <link rel="icon" href="../res/images/favicon.ico">
   <link rel="apple-touch-icon" href="../res/images/favicon.ico">
-  <meta name="description" content="Alumni of JMI. TEDxJMI, x = independently organised TED event. Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta name="keywords" content="TEDx, JMI, Jamia Millia Islamia, New Delhi, event, talks">
+  <meta name="description" content="About TEDxSIES, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology.">
+  <meta name="keywords" content="TEDx, SIESGST, SIES Graduate School of Technology, Navi Mumbai, event, talks, home, official, online, live, website">
 
   <!-- Social media tags -->
   <!-- Open Graph -->
-  <meta property="og:title" content="Alumni of JMI">
-  <meta property="og:description" content="TEDxJMI - Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta property="og:image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
-  <meta property="og:url" content="https://tedxjmi.com/alumni">
+  <meta property="og:title" content="About TEDx | TEDxSIES">
+  <meta property="og:description" content="About TEDxSIES, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology.">
+  <meta property="og:image" content="https://tedxsiesgst.live/og_icon.png">
+  <meta property="og:url" content="https://tedxsiesgst.live">
+  <meta property="og:type" content="website" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="512" />
+  <meta property="og:image:height" content="512" />
+  <meta property="og:image:alt" content="TEDxSIESGST" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@TEDxSIEGST">
+  <meta name="twitter:site" content="@TEDxSIESGST">
+  <meta name="twitter:title" content="About TEDx | TEDxSIES" />
+  <meta name="twitter:description" content="About TEDxSIES, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology." />
+  <meta name="twitter:image" content="https://tedxsiesgst.live/og_icon.png" />
   <!-- Google+ -->
-  <meta itemprop="name" content="About Tedxsiesgst">
-  <meta itemprop="description" content="TEDxJMI - Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta itemprop="image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
+  <meta itemprop="name" content="About TEDx | TEDxSIES">
+  <meta itemprop="description" content="About TEDxSIES, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology.">
+  <meta itemprop="image" content="https://tedxsiesgst.live/og_icon.png">
 
   <!-- Browser themes -->
   <!-- Chrome, Firefox OS and Opera -->
@@ -88,7 +96,7 @@
 
         <div id="navbar" class="navbar-collapse collapse col-lg-9 pull-right">
           <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700">
-            <li><a href="/alumni/" class="page-scroll">About</a></li>
+            <li><a href="/about/" class="page-scroll">About</a></li>
             <li><a href="/speakers/" class="line-height-unset">Speakers</a></li>
             <li><a href="/our-team/" class="line-height-unset">Our Team</a></li>
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
