--- a/register/index.html
+++ b/register/index.html
@@ -14,26 +14,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>Register | TEDxJMI</title>
+  <title>Speaker Registration | TEDxSIESGST</title>
   <link rel="shortcut icon" href="../res/images/favicon.ico">
   <link rel="icon" href="../res/images/favicon.ico">
   <link rel="apple-touch-icon" href="../res/images/favicon.ico">
-  <meta name="description" content="Register for TEDxJMI, x = independently organised TED event. Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta name="keywords" content="TEDx, JMI, Jamia Millia Islamia, New Delhi, event, talks">
+  <meta name="description" content="Speaker Registration for TEDxSIESGST, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology.">
+  <meta name="keywords" content="TEDx, SIESGST, SIES Graduate School of Technology, Navi Mumbai, event, talks, speaker registration, registration, speaker, official, online, live, website">
 
   <!-- Social media tags -->
   <!-- Open Graph -->
-  <meta property="og:title" content="Register for TEDxJMI">
-  <meta property="og:description" content="TEDxJMI - Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta property="og:image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
-  <meta property="og:url" content="https://tedxjmi.com/register">
+  <meta property="og:title" content="Speaker Registration | TEDxSIESGST">
+  <meta property="og:description" content="Speaker Registration for TEDxSIESGST, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology.">
+  <meta property="og:image" content="https://tedxsiesgst.live/og_icon.png">
+  <meta property="og:url" content="https://tedxsiesgst.live">
+  <meta property="og:type" content="website" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="512" />
+  <meta property="og:image:height" content="512" />
+  <meta property="og:image:alt" content="TEDxSIESGST" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@TEDx_JMI">
+  <meta name="twitter:site" content="@TEDxSIESGST">
+  <meta name="twitter:title" content="Speaker Registration | TEDxSIESGST" />
+  <meta name="twitter:description" content="Speaker Registration for TEDxSIESGST, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology." />
+  <meta name="twitter:image" content="https://tedxsiesgst.live/og_icon.png" />
   <!-- Google+ -->
-  <meta itemprop="name" content="Register for TEDxJMI">
-  <meta itemprop="description" content="TEDxJMI - Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta itemprop="image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
+  <meta itemprop="name" content="Speaker Registration | TEDxSIESGST">
+  <meta itemprop="description" content="Speaker Registration for TEDxSIESGST, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology.">
+  <meta itemprop="image" content="https://tedxsiesgst.live/og_icon.png">
 
   <!-- Browser themes -->
   <!-- Chrome, Firefox OS and Opera -->
@@ -149,7 +157,7 @@
 
         <div id="navbar" class="navbar-collapse collapse col-lg-9 pull-right">
           <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700">
-            <li><a href="/alumni/" class="page-scroll">About</a></li>
+            <li><a href="/about/" class="page-scroll">About</a></li>
             <li><a href="/speakers/" class="line-height-unset">Speakers</a></li>
             <li><a href="/our-team/" class="line-height-unset">Our Team</a></li>
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
