Banner Image and Content Updated
Added new content for our theme.
Replaced Banner text with image.

--- a/about/index.html
+++ b/about/index.html
@@ -149,6 +149,16 @@
           <h2 class="font-family-alt font-weight-600">
             What is <span class="text-base-color">TEDxSIESGST?</span> 
           </h2>
+          <br>
+          <p class="text-justify-center">
+            Voice of a beautiful mind combined with the willingness to inspire. Is'nt that all we need to inspire people to look at the world differently. Hence TEDx SIESGST provides a platform for people with innovative thoughts who could inspire masses to tackle hurdles from various walks of their respective lives.<br><br>
+
+            Keeping our theme <b>“SomethinK Different”</b>  in mind we aim to throw light on the fact that the world is going through a global change. We humans are extremely comfortable with the concept of homeostasis but often forget that this very concept is overridden by the phrase <b>“Change is the only constant”.</b> Our current scenario itself is a conclusive proof that the world is undergoing a paradigm shift and we have to adapt to it. Internet has become not a luxury but a compulsion in today’s world. The future projects a complete change in the lifestyle of people and how virtual presence is becoming the new norm . Absence of social and emotional contact has made it a challenge to stabilize our mental health.
+           <br><br> 
+            Hence TEDx SIESGST is providing a platform for creative and innovative minds who could voice out their opinions to adapt and tackle not only the current scenario but also similar circumstances that could arise in future. This might help us to take the world from another point of view and arrive at executable conclusions that might help us adapt to this everchanging environment.
+            
+
+          </p>
           </div>
         </div>
         <!-- //.col-md-10 -->
@@ -156,9 +166,6 @@
       <!-- //.row -->
 
   
-
-  
-
 
 
   <!-- Section - Parallax banner start -->
