--- a/about/index.html
+++ b/about/index.html
@@ -127,7 +127,7 @@
           </h1>
           <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
                 <h1 class="font-family-alt font-weight-700">
-                  What is <span class="text-base-color">TED?</span>
+                  What is <span class="text-base-color">TED</span>?
                 </h1>
           <br>
           <div class="text-gray-dark-2">
@@ -141,13 +141,13 @@
             <br>
           <div class="text-gray-dark-2">
             <h2 class="font-family-alt font-weight-600 ">
-             What is  <span class="text-base-color">TEDx?</span>
+             What is  <span class="text-base-color">TEDx</span>?
             </h2>
             <br>
             <p class="text-justify-center"> In the spirit of ideas worth spreading, TEDx is a program of local, self-organized events that bring people together to share a TED-like experience. At a TEDx event, TED Talks video and live speakers combine to spark deep discussion and connection. These local, self-organized events are branded TEDx, where x = independently organized TED event. The TED Conference provides general guidance for the TEDx program, but individual TEDx event are self-organized. (Subject to certain rules and regulations.) </p>
           <br>
           <h2 class="font-family-alt font-weight-600">
-            What is <span class="text-base-color">TEDxSIESGST?</span> 
+            What is <span class="text-base-color">TEDx</span>SIESGST?
           </h2>
           <br>
           <p class="text-justify-center">
