--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                   <div class="col-md-10 col-md-offset-1 text-center">
                     
                     <picture>
-                      <source media="(min-width: 900px)" srcset="/res/images/logos/SD2.png">
-                      <source media="(min-width: 480px)" srcset="/res/images/logos/SD.png">
+                      <source media="(min-width: 900px)" srcset="./res/images/logos/SD2.png">
+                      <source media="(min-width: 300px)" srcset="./res/images/logos/SD.png">
                       <img src="OtherImage.png" alt="IfItDoesntMatchAnyMedia">
                   </picture>
 
@@ -181,8 +181,8 @@
                     </h1> -->
 
                     <picture>
-                      <source media="(min-width: 900px)" srcset="/res/images/logos/SD2.png">
-                      <source media="(min-width: 480px)" srcset="/res/images/logos/SD.png">
+                      <source media="(min-width: 900px)" srcset="./res/images/logos/SD2.png">
+                      <source media="(min-width: 300px)" srcset="./res/images/logos/SD.png">
                       <img src="OtherImage.png" alt="IfItDoesntMatchAnyMedia">
                   </picture>
 
@@ -231,8 +231,8 @@
                     </h1> -->
 
                     <picture>
-                      <source media="(min-width: 900px)" srcset="/res/images/logos/SD2.png">
-                      <source media="(min-width: 480px)" srcset="/res/images/logos/SD.png">
+                      <source media="(min-width: 900px)" srcset="./res/images/logos/SD2.png">
+                      <source media="(min-width: 300px)" srcset="./res/images/logos/SD.png">
                       <img src="OtherImage.png" alt="IfItDoesntMatchAnyMedia">
                   </picture>
 
