--- a/404.html
+++ b/404.html
@@ -12,27 +12,42 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>Page Not Found | TEDxSIEGST</title>
+  <title>Page Not Found | TEDxSIESGST</title>
   <link rel="shortcut icon" href="res/images/favicon.ico">
-  <meta name="description" content="TEDxSIESGST, x = independently organised TED event. SomethinK Different This October, at SIES Graduate School of Technology.">
-  <meta name="keywords" content="TEDx, SIESGST, SIES Graduate School of Technology, Navi Mumbai, event, talks">
+  <link rel="icon" href="res/images/favicon.ico">
+  <link rel="apple-touch-icon" href="res/images/favicon.ico">
+  <meta name="description" content="Error 404! Page Not Found.">
+  <meta name="keywords" content="">
 
   <!-- Social media tags -->
   <!-- Open Graph -->
-  <meta property="og:title" content="TEDxSIESGST">
-  <meta property="og:description" content="SomethinK Different This October, at SIES Graduate School of Technology.">
-  <meta property="og:image" content="https://tedxsiesgst.live/res/images/logos/tedxsiesgst_white.png">
+  <meta property="og:title" content="Page Not Found | TEDxSIESGST">
+  <meta property="og:description" content="Error 404! Page Not Found.">
+  <meta property="og:image" content="https://tedxsiesgst.live/og_icon.png">
   <meta property="og:url" content="https://tedxsiesgst.live">
+  <meta property="og:type" content="website" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="512" />
+  <meta property="og:image:height" content="512" />
+  <meta property="og:image:alt" content="TEDxSIESGST" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@TEDx_SIESGST">
+  <meta name="twitter:site" content="@TEDxSIESGST">
+  <meta name="twitter:title" content="Page Not Found | TEDxSIESGST" />
+  <meta name="twitter:description" content="Error 404! Page Not Found." />
+  <meta name="twitter:image" content="https://tedxsiesgst.live/og_icon.png" />
   <!-- Google+ -->
-  <meta itemprop="name" content="TEDxSIESGST">
-  <meta itemprop="description" content="SomethinK Different This October, at SIES Graduate School of Technology.">
-  <meta itemprop="image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
+  <meta itemprop="name" content="Page Not Found | TEDxSIESGST">
+  <meta itemprop="description" content="Error 404! Page Not Found.">
+  <meta itemprop="image" content="https://tedxsiesgst.live/og_icon.png">
 
   <!-- Browser themes -->
+  <!-- Chrome, Firefox OS and Opera -->
   <meta name="theme-color" content="#000">
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#000">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#000">
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="res/css/bootstrap.min.css">
