Privacy page updated

--- a/Privacy/privacy.html
+++ b/Privacy/privacy.html
@@ -16,22 +16,22 @@
   <!-- Title, icon, description and keywords -->
   <title>About TedX | TEDxSIES</title>
   <link rel="shortcut icon" href="../res/images/favicon.ico">
-  <meta name="description" content="Alumni of JMI. TEDxJMI, x = independently organised TED event. Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta name="keywords" content="TEDx, JMI, Jamia Millia Islamia, New Delhi, event, talks">
+  <meta name="description" content="Team TEDxSIESGST, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology.">
+  <meta name="keywords" content="TEDx, SIESGST, SIES Graduate School of Technology, Navi Mumbai, event, talks, team, official, online, live, website">
 
   <!-- Social media tags -->
   <!-- Open Graph -->
-  <meta property="og:title" content="Alumni of JMI">
-  <meta property="og:description" content="TEDxJMI - Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta property="og:image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
-  <meta property="og:url" content="https://tedxjmi.com/alumni">
+  <meta property="og:title" content="TEDxSIESGST | Privacy Policy>
+  <meta property="og:description" content="Team TEDxSIESGST, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology.">
+  <meta property="og:image" content="https://tedxsiesgst.live/og_icon.png">
+  <meta property="og:url" content="https://tedxsiesgst.live/privacy">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@TEDx_JMI">
+  <meta name="twitter:site" content="@TEDxSIESGST">
   <!-- Google+ -->
-  <meta itemprop="name" content="Alumni of JMI">
-  <meta itemprop="description" content="TEDxJMI - Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta itemprop="image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
+  <meta itemprop="name" content="TEDxSIESGST | Privacy Policy">
+  <meta itemprop="description" content="Team TEDxSIESGST, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology.">
+  <meta itemprop="image" content="https://tedxSiesgst.live/images/logos/light-social.jpg">
 
   <!-- Browser themes -->
   <meta name="theme-color" content="#000">
@@ -140,7 +140,7 @@
               By using this Website and/or by providing your information, you consent to the collection and use of the information you disclose on the Website in accordance with this Privacy Policy, including but not limited to your consent for sharing your information as per this privacy policy. If we decide to change our privacy policy, we will post those changes on this page so that you are always aware of what information we collect, how we use it, and under what circumstances we disclose it. Your continued use of the Website following the posting of changes to this policy will be deemed your acceptance of those changes.</li>
               <li><Strong> Queries/Contact Us</Strong></li>
               If you have any questions regarding this Privacy Policy, the practices of this website, or your dealings with this site please refer to the Contact section, and send us your queries there.</li>
-              To modify your personal information submitted to this Website, email us at - tedxsiesgst@gmail.com</li>
+              To modify your personal information submitted to this Website, email us at - tedx@siesgst.ac.in</li>
               </ol>
             </div>
 
