--- a/Privacy/privacy.html
+++ b/Privacy/privacy.html
@@ -14,27 +14,42 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>About TedX | TEDxSIES</title>
+  <title>Privacy Policy | TEDxSIESGST</title>
   <link rel="shortcut icon" href="../res/images/favicon.ico">
-  <meta name="description" content="Team TEDxSIESGST, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology.">
-  <meta name="keywords" content="TEDx, SIESGST, SIES Graduate School of Technology, Navi Mumbai, event, talks, team, official, online, live, website">
+  <link rel="icon" href="../res/images/favicon.ico">
+  <link rel="apple-touch-icon" href="../res/images/favicon.ico">
+  <meta name="description" content="Privacy Policy of TEDxSIESGST, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology.">
+  <meta name="keywords" content="TEDx, SIESGST, SIES Graduate School of Technology, Navi Mumbai, event, talks, privacy policy, privacy, official, online, live, website">
 
   <!-- Social media tags -->
   <!-- Open Graph -->
-  <meta property="og:title" content="TEDxSIESGST | Privacy Policy>
-  <meta property="og:description" content="Team TEDxSIESGST, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology.">
+  <meta property="og:title" content="Privacy Policy | TEDxSIESGST">
+  <meta property="og:description" content="Privacy Policy of TEDxSIESGST, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology.">
   <meta property="og:image" content="https://tedxsiesgst.live/og_icon.png">
-  <meta property="og:url" content="https://tedxsiesgst.live/privacy">
+  <meta property="og:url" content="https://tedxsiesgst.live">
+  <meta property="og:type" content="website" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="512" />
+  <meta property="og:image:height" content="512" />
+  <meta property="og:image:alt" content="TEDxSIESGST" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@TEDxSIESGST">
+  <meta name="twitter:title" content="Privacy Policy | TEDxSIESGST" />
+  <meta name="twitter:description" content="Privacy Policy of TEDxSIESGST, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology." />
+  <meta name="twitter:image" content="https://tedxsiesgst.live/og_icon.png" />
   <!-- Google+ -->
-  <meta itemprop="name" content="TEDxSIESGST | Privacy Policy">
-  <meta itemprop="description" content="Team TEDxSIESGST, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology.">
-  <meta itemprop="image" content="https://tedxSiesgst.live/images/logos/light-social.jpg">
+  <meta itemprop="name" content="Privacy Policy | TEDxSIESGST">
+  <meta itemprop="description" content="Privacy Policy of TEDxSIESGST, x = independently organised TED event. SomethinK Different. This October, at SIES Graduate School of Technology.">
+  <meta itemprop="image" content="https://tedxsiesgst.live/og_icon.png">
 
   <!-- Browser themes -->
+  <!-- Chrome, Firefox OS and Opera -->
   <meta name="theme-color" content="#000">
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#000">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#000">
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="../res/css/bootstrap.min.css">
@@ -73,7 +88,7 @@
           </button>
 
           <a class="navbar-brand font-family-alt letter-spacing-1 text-extra-large text-uppercase" href="/">
-            <img class="logo-navbar-dark" src="../res/images/logos/test2.png" alt=""/>
+            <img class="logo-navbar-dark" src="../res/images/logos/dark.png" alt=""/>
             <img class="logo-navbar-white" src="../res/images/logos/light.png" alt=""/>
           </a>
         </div>
@@ -81,7 +96,7 @@
 
         <div id="navbar" class="navbar-collapse collapse col-lg-9 pull-right">
           <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700">
-            <li><a href="/alumni" class="page-scroll">About</a></li>
+            <li><a href="/about/" class="page-scroll">About</a></li>
             <li><a href="/speakers/" class="line-height-unset">Speakers</a></li>
             <li><a href="/our-team/" class="line-height-unset">Our Team</a></li>
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
@@ -163,8 +178,8 @@
             Date &amp; Time
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            September 16, 2020<br>
-            10 AM to 5 PM
+            October, 2020<br>
+            <!-- 10 AM to 5 PM -->
           </p>
         </div>
         <!-- //.col-sm-4 -->
@@ -172,18 +187,18 @@
         <div class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
           <i class="fa fa-map-marker display-block text-base-color title-extra-large-2"></i>
           <span class="display-block font-family-alt font-weight-700 letter-spacing-1 margin-5 no-margin-bottom no-margin-rl text-large text-uppercase">
-            Venue
+            SIES Graduate School of Technology
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            SIES Graduate School of Technology,<br>
-            Youtube Stream
+            Youtube Live Stream<br>
+            
           </p>
         </div>
         <!-- //.col-sm-4 -->
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
-          <a href="/res/insider_guide.pdf" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-            <span>Download<br>insider guide</span>
+          <a href="javascript: void(0)" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl" disabled>
+            <span>YouTube Live<br>Link</span>
           </a>
         </div>
         <!-- //.col-sm-4 -->
