--- a/speakers/index.html
+++ b/speakers/index.html
@@ -464,8 +464,8 @@
             Date &amp; Time
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            October 16, 2017<br>
-            10 AM to 5 PM
+            October, 2020<br>
+            <!-- 10 AM to 5 PM -->
           </p>
         </div>
         <!-- //.col-sm-4 -->
@@ -473,18 +473,18 @@
         <div class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
           <i class="fa fa-map-marker display-block text-base-color title-extra-large-2"></i>
           <span class="display-block font-family-alt font-weight-700 letter-spacing-1 margin-5 no-margin-bottom no-margin-rl text-large text-uppercase">
-            Venue
+            SIES Graduate School of Technology
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            SIES Graduate School of Technology,<br>
+            Youtube Live Stream<br>
             
           </p>
         </div>
         <!-- //.col-sm-4 -->
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
-          <a href="/res/insider_guide.pdf" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-            <span>Download<br>insider guide</span>
+          <a href="javascript: void(0)" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl" disabled>
+            <span>YouTube Live<br>Link</span>
           </a>
         </div>
         <!-- //.col-sm-4 -->
