--- a/index.html
+++ b/index.html
@@ -336,11 +336,10 @@
             </h3>----->
             <br>
             <p class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-white xs-title-small title-large text-uppercase font-weight-700">
-              Official Live Stream<br>
+              Official YouTube Live Stream<br>
             </p>
             <br>
-            <a href="https://www.youtube.com/" target="_blank"
-                class="btn btn-outline-white sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl">
+            <a href="javascript: void(0)" class="btn btn-outline-white sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl" disabled>
               Going Live Soon
             </a>
           </div>
